--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>JavaScript</title>
 </head>
 <body>
- <h1>Hello, JS!</h1>
+ <h1>JS module 2</h1>
+  <script
+  defer
+  src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+  integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+  crossorigin="anonymous"
+  ></script>
   <script src="./js/task-1.js" defer></script>
   <script src="./js/task-2.js" defer></script>
   <script src="./js/task-3.js" defer></script>
